--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,17 +1,9 @@
 dist_pkgdata_DATA = 
 
-if ORSIM
-
-dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
-
-endif
-
 if GRIBAPI
 dist_pkgdata_DATA += vargrib2bufr.csv
 endif
 
-EXTRA_DIST = libsim_gen_var_ora.sh libsim_gen_varconv_ora.py
-
 # for tests/examples
-EXTRA_DIST += t_p.grb estra_temp.dat
+EXTRA_DIST = t_p.grb estra_temp.dat
 
