Added library dependencies

--- a/termolib/Makefile.am
+++ b/termolib/Makefile.am
@@ -31,7 +31,7 @@ TESTS = $(check_PROGRAMS)
 TESTS_ENVIRONMENT = $(top_srcdir)/testenv
 
 termolib_test_SOURCES = termolib_test.f90
-termolib_test_LDADD = libsim_termolib.la
+termolib_test_LDADD = libsim_termolib.la ../base/libsim_base.la
 
 
 mostlyclean-compile:
