--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,17 @@ Source: libsim
 Section: contrib/science
 Priority: extra
 Maintainer: Daniele Branchini <dbranchini@arpa.emr.it>
-Build-Depends: debhelper (>= 5), autotools-dev, libemos, fortran-compiler, oracle-client-dev, libgrib-api-dev, libdballef-dev, libcnf-dev, unixodbc-dev
+Build-Depends:
+  debhelper (>= 12), dh-fortran-mod (>= 0.11), pkg-config,
+  autotools-dev, libemos, fortran-compiler, libfortrangis-dev,
+  libeccodes-dev, libdballef-dev, libcnf-dev
 Standards-Version: 3.7.2
+Rules-Requires-Root: no
+Homepage: https://github.com/ARPA-SIMC/libsim
+Vcs-Git: https://github.com/ARPA-SIMC/libsim.git
 
 Package: libsim
+Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: A group of three utility modules written in Fortran90.
