avoid use of db_utils module (Oracle legacy) and avoid use of dballe legacy interface, closes #17

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -8,11 +8,7 @@ pkglibexec_PROGRAMS =
 
 if NCARG
 bin_PROGRAMS += v7d_plot_sound
-v7d_plot_sound_SOURCES =
-if DBALLE
-v7d_plot_sound_SOURCES += db_utils.F90
-endif
-v7d_plot_sound_SOURCES += v7d_plot_sound.F90
+v7d_plot_sound_SOURCES = v7d_plot_sound.F90
 v7d_plot_sound_LDADD = ../graphics/libsim_graphics.la  ../vol7d/libsim_vol7d.la  ../log4fortran/liblog4fortran.la ../termolib/libsim_termolib.la ../base/libsim_base.la
 endif
 
@@ -30,10 +26,10 @@ dist_check_SCRIPTS += dba_qcfilter_test.sh
 if SHAPELIB
 bin_PROGRAMS += v7d_qccli v7d_qctem
 
-v7d_qccli_SOURCES = v7d_qccli.F90 
+v7d_qccli_SOURCES = v7d_qccli.F90
 v7d_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
 
-v7d_qctem_SOURCES = db_utils.F90 v7d_qctem.F90 
+v7d_qctem_SOURCES = v7d_qctem.F90
 v7d_qctem_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
 
 if NCARG
@@ -41,7 +37,7 @@ if NCARG
 # which requires NCAR for triangulations
 bin_PROGRAMS += v7d_qcspa
 
-v7d_qcspa_SOURCES = db_utils.F90 v7d_qcspa.F90 
+v7d_qcspa_SOURCES = v7d_qcspa.F90
 v7d_qcspa_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
 
 v7d_qcspa_LDADD += ../graphics/libsim_graphics.la ../termolib/libsim_termolib.la
@@ -58,8 +54,7 @@ v7d_pollini_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortr
 endif
 
 bin_PROGRAMS += v7d_transform
-v7d_transform_SOURCES =
-
+v7d_transform_SOURCES = v7d_transform.F90
 v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la ../volgrid6d/libsim_volgrid6d.la ../log4fortran/liblog4fortran.la
 
 if ALCHIMIA
@@ -67,15 +62,7 @@ v7d_transform_LDADD += ../alchimia/libsim_alchimia.la ../termolib/libsim_termoli
 endif
 
 pkglibexec_PROGRAMS += v7d_add_wmo_info
-v7d_add_wmo_info_SOURCES =
-
-if DBALLE
-v7d_transform_SOURCES += db_utils.F90
-v7d_add_wmo_info_SOURCES += db_utils.F90
-endif
-
-v7d_transform_SOURCES += v7d_transform.F90
-v7d_add_wmo_info_SOURCES += v7d_add_wmo_info.F90
+v7d_add_wmo_info_SOURCES = v7d_add_wmo_info.F90
 v7d_add_wmo_info_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 
 bin_PROGRAMS += vg6d_getpoint vg6d_transform
