improve build rules for simc_nc2grib

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -83,9 +83,11 @@ else
 vg6d_getpoint_SOURCES = vg6d_getpoint.F90
 endif
 
+if NETCDF
 bin_PROGRAMS += simc_nc2grib
 simc_nc2grib_SOURCES = simc_nc2grib.f90
-simc_nc2grib_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la
+simc_nc2grib_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la $(NETCDF_LIBS)
+endif
 
 vg6d_getpoint_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la
 vg6d_getpoint_pkauf_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la
