--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Daniele Branchini <dbranchini@arpa.emr.it>
 Build-Depends:
   debhelper (>= 12), dh-fortran-mod (>= 0.11), pkg-config,
   autotools-dev, fortran-compiler, libfortrangis-dev,
-  libeccodes-dev, libdballef-dev, liblog4c-dev, libshp-dev
+  libeccodes-dev, libdballef-dev, liblog4c-dev, libshp-dev,
+  libnetcdff7
 Standards-Version: 3.7.2
 Rules-Requires-Root: no
 Homepage: https://github.com/ARPA-SIMC/libsim
