Exclude dba_qcfilter from debian package

--- a/debian/rules
+++ b/debian/rules
@@ -13,3 +13,6 @@ override_dh_auto_configure:
 	       --enable-f2003-features --enable-f2003-extended-features
 
 override_dh_auto_test:
+
+override_dh_install:
+	dh_install --exclude dba_qcfilter
