--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Daniele Branchini <dbranchini@arpa.emr.it>
 Build-Depends:
   debhelper (>= 12), dh-fortran-mod (>= 0.11), pkg-config,
   autotools-dev, fortran-compiler, libfortrangis-dev,
-  libeccodes-dev, libdballef-dev, liblog4c-dev, libshp-dev,
+  libeccodes-dev, libeccodes-tools,
+  libdballef-dev, liblog4c-dev, libshp-dev,
   libnetcdff-dev, libgdal-dev, texlive, texlive-binaries,
   doxygen
 Standards-Version: 3.7.2
