add create_projgrib utility from prodsim repository (to be tested)

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -66,8 +66,9 @@ bin_PROGRAMS += vg6d_getpoint vg6d_transform
 
 if GRIBAPI
 vg6d_getpoint_SOURCES = grib_api_csv.F90 vg6d_getpoint.F90
-pkglibexec_PROGRAMS += vg6d_getpoint_pkauf
+pkglibexec_PROGRAMS += vg6d_getpoint_pkauf create_projgrib
 vg6d_getpoint_pkauf_SOURCES = grib_api_csv.F90 vg6d_getpoint_pkauf.F90
+create_projgrib_SOURCES = create_projgrib.F90
 if DBALLE
 pkglibexec_PROGRAMS += vg6d_tcorr
 #noinst_PROGRAMS += vg6d_column
@@ -88,6 +89,8 @@ endif
 
 vg6d_getpoint_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la $(LOG4C_LIBS) $(GRIBAPI_LIBS)
 vg6d_getpoint_pkauf_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la $(LOG4C_LIBS) $(GRIBAPI_LIBS)
+
+create_projgrib_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la $(LOG4C_LIBS) $(GRIBAPI_LIBS)
 
 vg6d_transform_SOURCES = vg6d_transform.F90
 vg6d_transform_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la $(LOG4C_LIBS) $(GRIBAPI_LIBS)
