final version of comp_start for forecasts, add a test, including grib2

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -106,7 +106,7 @@ if GRIBAPI
 if SHAPELIB
 dist_check_SCRIPTS += getpoint_transform_test.sh
 endif
-dist_check_SCRIPTS += stat_proc_test.sh
+dist_check_SCRIPTS += stat_proc_test.sh stat_proc_test_g2.sh
 endif
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
